log
Wed, May  7, 2025  4:51:08 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May  7, 2025  5:12:24 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:18: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int** sudo = n->sudo;
                  ^
sudoku.c:54:11: error: unused variable 'sudo' [-Werror=unused-variable]
     int** sudo = n->sudo;
           ^~~~
cc1.exe: all warnings being treated as errors
10625e9
Wed, May  7, 2025  5:12:38 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d9a5cf
Wed, May  7, 2025  5:14:30 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:61:23: error: subscripted value is neither array nor pointer nor vector
           node_copy[i][k] = count;
                       ^
892ac22
Wed, May  7, 2025  5:14:40 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a4bed90
Wed, May  7, 2025  5:16:40 PM: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:33: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
           node_copy->sudo[i][k] = new_number;
                                 ^
cc1.exe: all warnings being treated as errors
c90091b
Wed, May  7, 2025  5:16:49 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
486f612
Wed, May  7, 2025  5:18:06 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
93edab4
Wed, May  7, 2025  5:19:03 PM: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:15: error: 'counter' undeclared (first use in this function)
           if (counter == 9) counter = 1;
               ^~~~~~~
sudoku.c:58:15: note: each undeclared identifier is reported only once for each function it appears in
ecedcf6
Wed, May  7, 2025  5:19:09 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6e207c6
Wed, May  7, 2025  5:19:47 PM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
b4e0258
Wed, May  7, 2025  5:20:06 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c82bb6b
Wed, May  7, 2025  5:23:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
72efd31
Wed, May  7, 2025  5:23:53 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9360239
Wed, May  7, 2025  5:25:53 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
a273a09
Wed, May  7, 2025  5:49:17 PM: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
254684a
Wed, May  7, 2025  5:50:18 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
927b997
Wed, May  7, 2025  5:51:32 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:60:7: error: 'listaColuma' undeclared (first use in this function)
       listaColuma[k] = n->sudo[k][i];
       ^~~~~~~~~~~
sudoku.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:9: error: unused variable 'listaColumna' [-Werror=unused-variable]
     int listaColumna[9] = {};
         ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
dddfa0f
Wed, May  7, 2025  5:51:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:60:7: error: 'listaColuma' undeclared (first use in this function)
       listaColuma[k] = n->sudo[k][i];
       ^~~~~~~~~~~
sudoku.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
9d1ce2e
Wed, May  7, 2025  5:51:58 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2001e5e
